--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/username_entry"
         android:inputType="textNoSuggestions|textVisiblePassword"
-        android:hint="@string/username_hint"
+        android:hint="@string/username_text_field_label"
         android:autofillHints="username"
         app:layout_constraintBottom_toTopOf="@id/password_entry"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/password_entry"
         android:inputType="textPassword"
-        android:hint="@string/password_hint"
+        android:hint="@string/password_text_field_label"
         android:autofillHints="password"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
